# modular_development

Guide/: Modular_Development.md  Project_Structure.md
x_core/: Cargo.toml
x_core/src/: lib.rs
x_instance/: Cargo.toml
x_instance/src/: lib.rs  main.rs  wrap.rs
x_instance_plugin_a/: Cargo.toml
x_instance_plugin_a/src/: lib.rs
x_instance_plugin_b/: Cargo.toml
x_instance_plugin_b/src/: lib.rs
