[package]
name = "x_core"
version = "0.1.0"
authors = ["YongJoon Joe"]
license = "BSD3"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "x_core"
path = "src/lib.rs"
edition = "2021"

[dependencies]
